[package]
name = "cosmocalc"
version = "0.1.0"
authors = [ "redshiftzero" ]
description = "A library for cosmological physics calculations"
repository = "https://github.com/redshiftzero/cosmocalc.rs"
keywords = ["cosmology", "physics", "astronomy"]
categories = ["physics"]
include = ["Cargo.toml", "src", "README.md"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
once_cell = "1.8"

[dev-dependencies]
criterion = { version = "0.3", features=["html_reports"] }

[[bench]]
name = "distances"
harness = false